<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/navigation_item_1"
            android:icon="@drawable/bottom_sheet_0"
            android:title="@string/asignatura_1" />
        <item
            android:id="@+id/navigation_item_2"
            android:icon="@drawable/bottom_sheet_0"
            android:title="@string/asignatura_2" />
        <item
            android:id="@+id/navigation_item_3"
            android:icon="@drawable/bottom_sheet_0"
            android:title="@string/asignatura_3" />
        <item
            android:id="@+id/navigation_item_4"
            android:icon="@drawable/bottom_sheet_0"
            android:title="@string/asignatura_4" />
        <item
            android:id="@+id/navigation_item_5"
            android:icon="@drawable/bottom_sheet_0"
            android:title="@string/asignatura_5" />
        <item
            android:id="@+id/navigation_item_6"
            android:icon="@drawable/bottom_sheet_0"
            android:title="@string/asignatura_6" />
        <item
            android:id="@+id/navigation_item_7"
            android:icon="@drawable/bottom_sheet_0"
            android:title="@string/asignatura_7" />
        <item
            android:id="@+id/navigation_item_8"
            android:icon="@drawable/bottom_sheet_0"
            android:title="@string/asignatura_8" />
        <item
            android:id="@+id/navigation_item_9"
            android:icon="@drawable/bottom_sheet_0"
            android:title="@string/asignatura_9" />
        <item
            android:id="@+id/navigation_item_10"
            android:icon="@drawable/bottom_sheet_0"
            android:title="@string/asignatura_10" />
        <item
            android:id="@+id/navigation_item_11"
            android:icon="@drawable/bottom_sheet_0"
            android:title="@string/asignatura_11" />
        <item
            android:id="@+id/navigation_item_12"
            android:icon="@drawable/bottom_sheet_0"
            android:title="@string/asignatura_12" />
        <item
            android:id="@+id/navigation_item_13"
            android:icon="@drawable/bottom_sheet_0"
            android:title="@string/asignatura_13" />
        <item
            android:id="@+id/navigation_item_14"
            android:icon="@drawable/bottom_sheet_0"
            android:title="@string/asignatura_14" />
        <item
            android:id="@+id/navigation_item_15"
            android:icon="@drawable/bottom_sheet_0"
            android:title="@string/asignatura_15" />
        <item
            android:id="@+id/navigation_item_16"
            android:icon="@drawable/bottom_sheet_0"
            android:title="@string/asignatura_16" />
        <item
            android:id="@+id/navigation_item_17"
            android:icon="@drawable/bottom_sheet_0"
            android:title="@string/asignatura_17" />
        <item
            android:id="@+id/navigation_item_18"
            android:icon="@drawable/bottom_sheet_0"
            android:title="@string/asignatura_18" />
        <item
            android:id="@+id/navigation_item_19"
            android:icon="@drawable/bottom_sheet_0"
            android:title="@string/asignatura_19" />
        <item
            android:id="@+id/navigation_item_20"
            android:icon="@drawable/bottom_sheet_0"
            android:title="@string/asignatura_20" />
        <item
            android:id="@+id/navigation_item_21"
            android:icon="@drawable/bottom_sheet_0"
            android:title="@string/asignatura_21" />
        <item
            android:id="@+id/navigation_item_22"
            android:icon="@drawable/bottom_sheet_0"
            android:title="@string/asignatura_22" />
        <item
            android:id="@+id/navigation_item_23"
            android:icon="@drawable/bottom_sheet_0"
            android:title="@string/asignatura_23" />
        <item
            android:id="@+id/navigation_item_24"
            android:icon="@drawable/bottom_sheet_0"
            android:title="@string/asignatura_24" />
        <item
            android:id="@+id/navigation_item_25"
            android:icon="@drawable/bottom_sheet_0"
            android:title="@string/asignatura_25" />
        <item
            android:id="@+id/navigation_item_26"
            android:icon="@drawable/bottom_sheet_0"
            android:title="@string/asignatura_26" />
        <item
            android:id="@+id/navigation_item_27"
            android:icon="@drawable/bottom_sheet_0"
            android:title="@string/asignatura_27" />

    </group>

</menu>